USER VISIBLE CHANGES BETWEEN ACE-6.0.6 and ACE-6.1.0
====================================================

USER VISIBLE CHANGES BETWEEN ACE-6.0.5 and ACE-6.0.6
====================================================

. Removed autoconf support, only traditional way of
  compilation is shipped from now

. Add support for RHEL 6.1 64bit

USER VISIBLE CHANGES BETWEEN ACE-6.0.4 and ACE-6.0.5
====================================================

. Improved support for Android and added the ability to run all ACE/TAO tests
  automatically using the Android emulator

USER VISIBLE CHANGES BETWEEN ACE-6.0.3 and ACE-6.0.4
====================================================

. Removed support for C++ Builder

. Added support for building with the Android NDK, at least r5c. This
  is currently available for linux host platforms.

USER VISIBLE CHANGES BETWEEN ACE-6.0.2 and ACE-6.0.3
====================================================

. Added support for GCC 4.6

USER VISIBLE CHANGES BETWEEN ACE-6.0.1 and ACE-6.0.2
====================================================

. The ACE_wrappers/ace/OS.h file has been restored in order to ensure
  build-time compatibility with older ACE versions. Its use will still
  cause your build to incur more processing time than using the needed
  ace/OS_NS_*.h files; however, you should be able to build OS.h-including
  code without needing to replace it with OS_NS_* includes.

. Improved and simplified QNX support

. Changed rand_r() and getpwnam_r() to conform Single UNIX Specification.

. Fixed performance of send_v on windows when individual iovec elements
  are particularly large.

USER VISIBLE CHANGES BETWEEN ACE-6.0.0 and ACE-6.0.1
====================================================

. Added support for MinGW with GCC 4.5

USER VISIBLE CHANGES BETWEEN ACE-5.8.3 and ACE-6.0.0
====================================================

. Changed the string format produced by ACE::timestamp() from the ctime